# nubipacs

./: .flake8  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  utils.md
config/: services.json
src/app/: config.py  db.py  main.py  service_mgmt.py
src/app/database/: db.py
src/app/database/models/: service.py
src/app/dicom/: dicom_server.py  dicom_server_manager.py  dicom_service.py
src/app/dicom/schemas/: dicom_server_params.py
src/app/management/: server.py
src/app/management/routes/: user.py
src/app/pacs_api/: pacs_api.py
src/app/routes/: user.py
src/app/schemas/: user.py
src/app/service_management/: pacs_service.py  services_manager.py
src/nubipacs/: config.py  main.py
src/nubipacs/database/: db.py
src/nubipacs/database/models/: service.py  user.py
src/nubipacs/dicom/: dicom_server.py  dicom_service.py
src/nubipacs/dicom/schemas/: dicom_server_application_entity.py  dicom_server_params.py
src/nubipacs/dicom_storage/: dicom_storage_change_service.py  dicom_storage_extension_interface.py  dicom_storage_interface.py  dicom_storage_service.py
src/nubipacs/dicom_storage/dicom_block_storage/: dicom_block_storage.py
src/nubipacs/dicom_storage/models/: dcm_change.py  dcm_dataset.py  dcm_instance.py  dcm_patient.py  dcm_serie.py  dcm_study.py
src/nubipacs/management/: server.py
src/nubipacs/management/routes/: user.py
src/nubipacs/pacs_api/: pacs_api.py
src/nubipacs/service_management/: pacs_service.py  pacs_service_interface.py  services_manager.py
src/nubipacs/utils/: singleton_meta.py
(+2 files in other folders)
