[project]
name = "nubipacs"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Durar",email = "felipe.malaquias@venturus.org.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "nubipacs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
